cleanup lexicon pages